Ajuste novo layout

--- a/www/interno/empresa.html
+++ b/www/interno/empresa.html
@@ -268,12 +268,11 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-4 px-3 py-2">
+<div class="container-fluid bg-white px-3 py-3  border-bottom border-light-subtle">
     <div class="row align-items-center">
         <div class="col align-self-center">
             <div class="d-flex flex-column align-items-start gap-1">
                 <h5 class="m-0">Minhas Empresas</h5>
-                <h6 class="m-0 breadcrumb-interno">Home - Empresa - Gerenciar Empresas</h6>
             </div>
         </div>
         <div class="col align-self-center">
@@ -283,7 +282,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-3 py-2">
+<div class="container-fluid p-5">
     <div class="row border border-light-subtle py-3 px-2 rounded-3 m-0 bg-white">
         <div class="col">
             <table class="table">
