--- a/www/interno/times.html
+++ b/www/interno/times.html
@@ -127,12 +127,11 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-4 px-3 py-2">
+<div class="container-fluid bg-white px-3 py-3  border-bottom border-light-subtle">
     <div class="row align-items-center">
         <div class="col align-self-center">
             <div class="d-flex flex-column align-items-start gap-1">
                 <h5 class="m-0">Times de Trabalho</h5>
-                <h6 class="m-0 breadcrumb-interno">Home - Negócios - Times de Trabalho</h6>
             </div>
         </div>
         <div class="col align-self-center">
@@ -142,9 +141,9 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid p-5">
     <div class="row align-items-start" is="dmx-repeat" id="repeat_times" dmx-bind:repeat="listar_times.data.query_times" key="id_times">
-        <div class="col-3 p-4 h-100 align-self-start">
+        <div class="col-3 h-100 align-self-start">
             <div class="row h-100 align-items-stretch">
                 <div class="col bg-white rounded-3 border border-light-subtle p-3 h-100">
                     <div class="d-flex justify-content-between align-items-center mb-2">
