--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -30,6 +30,7 @@
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
 
+
     <dmx-preloader id="carregamento" spinner="wave" color="#ffc107"></dmx-preloader>
     <div is="dmx-browser" id="navegacao"></div>
     <dmx-notifications id="notificacoes" position="bottom" align="center"></dmx-notifications>
@@ -48,11 +49,9 @@
     <dmx-serverconnect id="usuario" url="http://localhost:3000/api/dados-usuario" site="backendMarte" dmx-param:id_usuario_logado="idUsuario.data.id"></dmx-serverconnect>
     <dmx-serverconnect id="listar_empresas" url="http://localhost:3000/api/listar-empresas" site="backendMarte" dmx-param:id_usuario_logado="idUsuario.data.id"></dmx-serverconnect>
     <dmx-serverconnect id="listar_colaboradores" url="http://localhost:3000/api/listar-colaboradores" site="backendMarte" dmx-param:id_empresa_atual="usuario.data.query[0].empresa_selecionada"></dmx-serverconnect>
-    <div class="container-fluid">
-
-        <div class="row h-100 justify-content-center border-top border-light-subtle">
-            <div class="col-1 text-center py-4 px-3 bg-primary h-100" id="side_icon">
-
+    <div class="container-fluid h-100">
+        <div class="row h-100 border-top border-light-subtle">
+            <div class="col-1 col-md-1 col-xl-1 bg-primary py-4">
                 <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/" internal="true"><img src="../assets/images/Spacefeed%20AVP%20-%2010.png" class="img-fluid m-0" width="48"></a></div>
                 <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/empresa" class="btn text-center w-100 py-3" internal="true"><i class="fas fa-home text-white"></i>
                         <div class="side-menu-link">Empresa</div>
@@ -67,10 +66,13 @@
                         <div class="side-menu-link">Funil</div>
                     </a></div>
 
+
+
+
             </div>
-            <div class="col-11">
-                <div class="row py-3 ps-3 bg-white" id="header_nav">
-                    <div class="col align-self-center">
+            <div class="col-11 col-md-11 col-xl-11">
+                <div class="row py-3 bg-white border-bottom border-light-subtle">
+                    <div class="col">
                         <div class="d-flex flex-row justify-content-start gap-2 align-items-stretch">
 
 
@@ -83,10 +85,8 @@
 
                             <button id="btn2" class="btn btn-primary" dmx-on:click="navegacao.reload()">Atualizar</button>
                         </div>
-
-
                     </div>
-                    <div class="col align-self-center">
+                    <div class="col">
                         <div class="d-flex justify-content-end align-items-center gap-5">
 
                             <i class="far fa-life-ring fa-lg"></i>
@@ -112,7 +112,10 @@
                         </div>
                     </div>
                 </div>
-                <main is="dmx-view" id="view1"></main>
+                <div class="row p-0">
+                    <div class="col p-0" is="dmx-view" id="view1">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
