--- a/www/interno/board-funil.html
+++ b/www/interno/board-funil.html
@@ -1,19 +1,19 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="boardfunil" appConnect="local" bootstrap5="local" capacitor="local" fontawesome_5="local" components="{dmxStateManagement:{}}" -->
 <dmx-query-manager id="board"></dmx-query-manager>
-<div class="container-fluid p-3 bg-white rounded-3 border border-light-subtle mt-4">
-    <div class="row">
+<div class="container-fluid p-5">
+    <div class="row bg-white px-3 pt-3 border rounded-3 border-light-subtle">
         <div class="col align-self-center">
-            <div class="d-flex justify-content-between align-items-center pb-3">
+            <div class="d-flex justify-content-between align-items-center pb-3 pt-1">
                 <div class="d-flex flex-column gap-2 align-items-start">
                     <h6 class="m-0 badge text-bg-secondary bg-warning">Fancy display heading</h6>
-                    <h4 class="m-0">Fancy display heading</h4>
+                    <h5 class="m-0">Fancy display heading</h5>
                     <p class="m-0">A nice paragraph</p>
                 </div>
                 <div class="d-flex flex-column align-items-end">
                     <button id="btn1" class="btn btn-primary">Adicionar lista</button>
                 </div>
             </div>
-            <div class="d-flex gap-3 pt-3 border-top border-light-subtle">
+            <div class="d-flex gap-4 py-2 border-top border-light-subtle">
                 <button id="btn2" class="btn px-0">Kunbun</button>
                 <button id="btn3" class="btn px-0">Lista</button>
             </div>
