--- a/www/interno/colaborador.html
+++ b/www/interno/colaborador.html
@@ -89,12 +89,11 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-4 px-3 py-2">
+<div class="container-fluid bg-white px-3 py-3  border-bottom border-light-subtle">
     <div class="row align-items-center">
         <div class="col">
             <div class="d-flex flex-column align-items-start gap-1">
                 <h5 class="m-0">Colaboradores</h5>
-                <h6 class="m-0 breadcrumb-interno">Home - Colaborador - Gerenciar Colaboradores</h6>
             </div>
         </div>
         <div class="col">
@@ -103,7 +102,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-3 py-2">
+<div class="container-fluid p-5">
     <div class="row border border-light-subtle py-3 px-2 rounded-3 m-0 bg-white">
         <div class="col">
             <table class="table">
