--- a/www/interno/Leads.html
+++ b/www/interno/Leads.html
@@ -1,12 +1,12 @@
-<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" -->
+<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="Leads" appConnect="local" bootstrap5="local" capacitor="local" fontawesome_5="local" -->
 <header class="container-fluid header-azul-escuro align-self-center">
     <div class="container-fluid pt-5">
         <div class="row align-items-start">
             <div class="col align-self-center">
-                <h3 class="m-0 text-white">Bem-vindo(a)</h3>
+                <h3 class="m-0 text-white">Leads</h3>
             </div>
             <div class="col align-self-center text-end">
-                <div class="d-flex justify-content-end gap-3"><button id="btn2" class="btn btn-outline-light">Tutoriais</button><button id="btn1" class="btn btn-warning">Suporte</button></div>
+                <div class="d-flex justify-content-end gap-3"><button id="btn1" class="btn btn-warning">Adicionar</button></div>
 
 
             </div>
