--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="../dmxAppConnect/dmxValidator/dmxValidator.css" />
     <script src="../dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
     <script src="../dmxAppConnect/dmxDataTraversal/dmxDataTraversal.js" defer></script>
+<script src="../dmxAppConnect/dmxBootstrap5Offcanvas/dmxBootstrap5Offcanvas.js" defer></script>
 </head>
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
@@ -51,26 +52,35 @@
     <dmx-serverconnect id="listar_empresas" url="http://localhost:3000/api/listar-empresas" site="backendMarte" dmx-param:id_usuario_logado="idUsuario.data.id"></dmx-serverconnect>
     <dmx-serverconnect id="listar_colaboradores" url="http://localhost:3000/api/listar-colaboradores" site="backendMarte" dmx-param:id_empresa_atual="usuario.data.query[0].empresa_selecionada"></dmx-serverconnect>
     <header class="bg-gradiente">
-        <div class="container-fluid py-3  border border-primary">
+        <div class="container-fluid py-4  border-top border-bottom border-info">
             <div class="row">
                 <div class="col align-self-center">
-                    <div class="d-flex align-items-center gap-2"><a href="/in/security/" internal="true" class="me-4"><img src="../assets/images/Spacefeed%20AVP%20-%2010.png" class="img-fluid m-0" width="40"></a>
+                    <div class="d-flex align-items-center gap-2"><a href="/in/security/" internal="true" class="me-4"><img src="../assets/images/Spacefeed%20AVP%20-%2006.png" class="img-fluid m-0" width="220"></a>
+                        <div class="nav w-100 align-items-center gap-1">
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/empresa" internal="true">Empresas</a>
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/colaborador" internal="true">Colaboradores</a>
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Times</a>
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Leads</a>
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div class="d-flex justify-content-end align-items-center gap-4">
+
                         <div class="d-flex flex-row justify-content-start gap-2 align-items-stretch">
 
 
-                            <div class="input-group w-auto" lang="pt">
+                            <div class="input-group input-group-transparent w-auto" lang="pt">
                                 <select class="form-select select-border" id="inputGroupSelect04" aria-label="Example select with button addon" dmx-bind:options="listar_empresas.data.query_empresas" optiontext="nome_polo" optionvalue="id_empresa" dmx-bind:value="usuario.data.query[0].empresa_selecionada">
                                     <option selected="" value="">Mudar de empresa</option>
                                 </select>
-                                <button class="btn btn-warning" type="button" dmx-on:click="selecionar_empresa.load({id_usuario: idUsuario.data.id, id_empresa: inputGroupSelect04.selectedValue});navegacao.reload()"><i class="fas fa-plus fa-sm px-2"></i><br></button>
+                                <button class="btn btn-light" type="button" dmx-on:click="selecionar_empresa.load({id_usuario: idUsuario.data.id, id_empresa: inputGroupSelect04.selectedValue});navegacao.reload()"><i class="fas fa-plus fa-sm px-2"></i><br></button>
                             </div>
 
                         </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="d-flex justify-content-end align-items-center gap-5">
-
+                        <button id="btn1" class="btn btn-warning" dmx-on:click="navegacao.reload()"><i class="fas fa-sync me-2"></i>Sync</button>
                         <div class="dropdown profile-menu">
                             <button id="dropdown5" class="btn dropdown-toggle btn-sm" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <div class="d-flex flex-row align-items-center justify-content-end p-0">
@@ -83,23 +93,13 @@
                                 </div>
                             </button>
                             <div class="dropdown-menu mt-3" aria-labelledby="dropdown5">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
                                 <a class="dropdown-item text-danger" href="#" dmx-on:click="idUsuario.removeAll();navegacao.reload()">Deslogar</a>
                             </div>
                         </div>
                         <!-- Profile Dropdown (botão flat, menu padrão bootstrap) -->
                     </div>
+
                 </div>
-            </div>
-        </div>
-        <div class="container-fluid py-2">
-            <div class="nav w-100 align-items-center gap-3">
-                <a class="nav-item nav-link text-white lh-1 px-0" href="/in/security/" internal="true">Inicio</a>
-                <a class="nav-item nav-link text-white lh-1" href="/in/security/empresa" internal="true">Empresas</a>
-                <a class="nav-item nav-link text-white lh-1" href="/in/security/colaborador" internal="true">Colaboradores</a>
-                <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Times</a>
-                <a class="nav-item nav-link text-white lh-1" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
             </div>
         </div>
 
