--- a/www/interno/empresa.html
+++ b/www/interno/empresa.html
@@ -268,58 +268,54 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-white px-3 py-3  border-bottom border-light-subtle">
-    <div class="row align-items-center">
-        <div class="col align-self-center">
-            <div class="d-flex flex-column align-items-start gap-1">
-                <h5 class="m-0">Minhas Empresas</h5>
+<header class="container-fluid header-azul-escuro align-self-center">
+    <div class="container-fluid pt-5">
+        <div class="row align-items-start">
+            <div class="col align-self-center">
+                <h3 class="m-0 text-white">Minhas empresas</h3>
             </div>
-        </div>
-        <div class="col align-self-center">
-            <div class="d-flex align-items-center gap-2 justify-content-end">
-                <button id="btn2" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal_criar">Adicionar</button>
+            <div class="col align-self-center text-end">
+                <button id="btn2" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modal_criar">Adicionar</button>
             </div>
         </div>
     </div>
-</div>
-<div class="container-fluid p-5">
-    <div class="row border border-light-subtle py-3 px-2 rounded-3 m-0 bg-white">
-        <div class="col">
-            <table class="table">
-                <thead>
-                    <tr>
+</header>
+<main class="px-4">
+    <div class="container-fluid bg-white rounded-4 p-4 container-minimo shadow">
+        <table class="table">
+            <thead>
+                <tr>
 
-                        <th class="pb-3 titulo-tabela">Razao social</th>
-                        <th class="pb-3 titulo-tabela">Nome fantasia</th>
-                        <th class="pb-3 titulo-tabela">Nome polo</th>
-                        <th class="pb-3 titulo-tabela">Cnpj</th>
-                        <th class="pb-3 titulo-tabela">Status</th>
-                        <th scope="row" class="pb-3 titulo-tabela text-end">Ações</th>
-                    </tr>
-                </thead>
-                <tbody is="dmx-repeat" dmx-generator="bs5table" dmx-bind:repeat="listar_empresas.data.query_empresas" id="tableRepeat2" key="id_empresa">
-                    <tr>
+                    <th class="pb-3 titulo-tabela">Razao social</th>
+                    <th class="pb-3 titulo-tabela">Nome fantasia</th>
+                    <th class="pb-3 titulo-tabela">Nome polo</th>
+                    <th class="pb-3 titulo-tabela">Cnpj</th>
+                    <th class="pb-3 titulo-tabela">Status</th>
+                    <th scope="row" class="pb-3 titulo-tabela text-end">Ações</th>
+                </tr>
+            </thead>
+            <tbody is="dmx-repeat" dmx-generator="bs5table" dmx-bind:repeat="listar_empresas.data.query_empresas" id="tableRepeat2" key="id_empresa">
+                <tr>
 
-                        <td dmx-text="razao_social" class="py-3 texto-tabela fw-bold"></td>
-                        <td dmx-text="nome_fantasia" class="py-3 texto-tabela"></td>
-                        <td dmx-text="nome_polo" class="py-3 texto-tabela"></td>
-                        <td dmx-text="cnpj" class="py-3 texto-tabela"></td>
-                        <td class="py-3 texto-tabela"><span class="badge" dmx-class:text-bg-success="status_empresa == 'Ativo'" dmx-class:text-bg-danger="status_empresa == 'Inativo'" dmx-text="status_empresa"></span></td>
-                        <td class="py-3 texto-tabela text-end">
-                            <div class="dropdown">
-                                <button id="dropdown1" class="btn dropdown-toggle btn-sm btn-light texto-tabela" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dmx-hide="status_empresa=='Inativo'">Ações&nbsp;</button>
-                                <div class="dropdown-menu" aria-labelledby="dropdown1">
-                                    <a class="dropdown-item dropdown-item-menor curso-ponteiro" dmx-on:click="data_empresa.select(id_empresa);modal_editar.show()">Editar</a>
-                                    <a class="dropdown-item text-danger dropdown-item-menor curso-ponteiro" dmx-on:click="data_empresa.select(id_empresa);modal_desativar.show()">Desativar</a>
-                                </div>
+                    <td dmx-text="razao_social" class="py-3 texto-tabela fw-bold"></td>
+                    <td dmx-text="nome_fantasia" class="py-3 texto-tabela"></td>
+                    <td dmx-text="nome_polo" class="py-3 texto-tabela"></td>
+                    <td dmx-text="cnpj" class="py-3 texto-tabela"></td>
+                    <td class="py-3 texto-tabela"><span class="badge" dmx-class:text-bg-success="status_empresa == 'Ativo'" dmx-class:text-bg-danger="status_empresa == 'Inativo'" dmx-text="status_empresa"></span></td>
+                    <td class="py-3 texto-tabela text-end">
+                        <div class="dropdown">
+                            <button id="dropdown1" class="btn dropdown-toggle btn-sm btn-light texto-tabela" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dmx-hide="status_empresa=='Inativo'">Ações&nbsp;</button>
+                            <div class="dropdown-menu" aria-labelledby="dropdown1">
+                                <a class="dropdown-item dropdown-item-menor curso-ponteiro" dmx-on:click="data_empresa.select(id_empresa);modal_editar.show()">Editar</a>
+                                <a class="dropdown-item text-danger dropdown-item-menor curso-ponteiro" dmx-on:click="data_empresa.select(id_empresa);modal_desativar.show()">Desativar</a>
                             </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-</div>
+</main>
 
 <script>
     // Initialize masks when modal is shown
