Card time. Modificado altura da title bar.  Atualizacao link leads. Mudanca de cor danger no tema bootstrao. CSS de gradientes.

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -60,7 +60,7 @@
                             <a class="nav-item nav-link text-white lh-1" href="/in/security/empresa" internal="true">Empresas</a>
                             <a class="nav-item nav-link text-white lh-1" href="/in/security/colaborador" internal="true">Colaboradores</a>
                             <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Times</a>
-                            <a class="nav-item nav-link text-white lh-1" href="/in/security/times" internal="true">Leads</a>
+                            <a class="nav-item nav-link text-white lh-1" href="/in/security/leads" internal="true">Leads</a>
                             <a class="nav-item nav-link text-white lh-1" href="/in/security/funil-de-vendas" internal="true">Funil de vendas</a>
                         </div>
 
